# enacit4r-files

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
auth/: README.md  pyproject.toml
auth/enacit4r_auth/services/: auth.py
enacit4r/models/: files.py
enacit4r/services/: s3.py
enacit4r/tools/: files.py
enacit4r_files/models/: files.py
enacit4r_files/services/: __init__.py  files.py  local.py  s3.py
enacit4r_files/utils/: files.py
files/: README.md  pyproject.toml
files/enacit4r_files/services/: s3.py
files/enacit4r_files/utils/: files.py
files/tests/: test_file_node.py
sql/: README.md
tests/: test_file_node.py  test_local_files_service.py  test_local_files_store.py  test_s3_files_store.py  test_sanitize.py  test_sanitize_path.py
