[tool.poetry]
name = "enacit4r"
version = "0.1.0"
description = "Python utils for EPFL ENAC IT4R developments"
authors = ["ymarcon <yannick.marcon@epfl.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiobotocore = "^2.15.2"
pillow = "^11.0.0"
pydantic = "^2.9.2"
fastapi = "^0.115.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
