[tool.poetry]
name = "enacit4r_files"
version = "0.5.0"
description = "Python file utils for EPFL ENAC IT4R developments"
authors = ["ymarcon <yannick.marcon@epfl.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiobotocore = "^2.15.2"
pillow = "^11.0.0"
pydantic = "^2.9.2"
fastapi = "^0.115.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
