[project]
name = "enacit4r_files"
version = "1.0.0"
description = "Python file utils for EPFL ENAC IT4R developments"
authors = [{name = "ymarcon", email = "yannick.marcon@epfl.ch"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiobotocore>=3.1.0",
    "pydantic>=2.9.2",
    "fastapi>=0.115.4",
    "pillow>=12.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["enacit4r_files"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
